project/stage/tests/accept/float_to_int.ul
void main(){
  int a;
  float b;

  a = 1;
  b = 1.0;

  b = a;
}