project/stage/tests/reject/wSt_3.1.6_invalid.ul
void main() {
    float a;
    int b;
    b = a;
}
